--- a/client/index.html
+++ b/client/index.html
@@ -22,17 +22,21 @@
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
-    <script>
-      $('.username').click(function() {
-        
-      });
-    </script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
-    </div>
+      <div class="spinner"><img src="images/spiffygif_46x46.gif"></div>
+      <div id="rooms">
+      Room:
+      <select id="roomSelect">
+      </select>
+      </div>
+    <form action="#" id="send" method="post">
+      <input type="text" name="message" id="message"/>
+      <input type="submit" name="submit" class="submit"/>
+    </form>
     <div id="chats"></div>
+    </div>
   </body>
 </html>
