--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
+    <link href='bower_components/bleach/dist/css/bleach.css' rel='styles/styles.css'>
+    <script type="text/javascript" src='bower_components/bleach/src/js/bleach.js' ></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -30,6 +32,8 @@
       <div id="rooms">
       Room:
       <select id="roomSelect">
+        <option> default</option>
+        <option id="newRoom"> ...add room </option>
       </select>
       </div>
     <form action="#" id="send" method="post">
