--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
     <link href='bower_components/bleach/dist/css/bleach.css' rel='styles/styles.css'>
-    <script type="text/javascript" src='bower_components/bleach/src/js/bleach.js' ></script>
+    <script src='bower_components/bleach/dist/js/bleach.js' ></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -20,6 +20,7 @@
         newSearch += 'username=' + (prompt('What is your name?') || 'anonymous');
         window.location.search = newSearch;
       }
+
     </script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
@@ -36,8 +37,8 @@
         <option id="newRoom"> ...add room </option>
       </select>
       </div>
-    <form action="#" id="send" method="post">
-      <input type="text" name="message" id="message"/>
+    <form id="send" >
+      <input type="text" id="message"/>
       <input type="submit" name="submit" class="submit"/>
     </form>
     <div id="chats"></div>
